# jsonproto

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: __main__.py  basic_model_operations.py  config.py  validate_coerce_convert.py
whatamithinking/jsonproto/: __init__.py  _codec.py  _common.py  _constraint_engine.py  _constraints.py  _errors.py  _issues.py  _patches.py  _pointers.py  _registry.py  _resolver.py  _struct.py  _types.py
whatamithinking/jsonproto/_handlers/: __init__.py  base.py  bytes.py  mappings.py  models.py  numbers.py  scalars.py  sequences.py  special_forms.py  strings.py  unions.py
whatamithinking/jsonproto/_serializers/: base.py  json.py  orjson.py
whatamithinking/jsonproto/serializers/: base.py  json.py  orjson.py
